--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ font-size: 30px;
 }
 .projects2{
 display:flex;
-background-color: #272DD4;
+background-color: #C9E9D0;
 flex-direction: column;
 }
 #project{
