--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ line-height: 30px;
 }
 .about2{
 display:flex;
-background-color: #787BBD;
+background-color: #F4A9C2;
 flex-direction: column;
 }
 </style>
